--- a/main.css
+++ b/main.css
@@ -1,9 +1,14 @@
+body {
+    background-color: black;
+}
+
 canvas {
     position: fixed;
     top: 0;
     left: 0;
     z-index: -1;
 }
+
 
 #hotbar {
     text-align: center;
@@ -41,4 +46,17 @@ button:active {
     background-color: #1d7e09;
     border-style: inset;
     color: #969696;
+}
+
+#unf {
+    position: fixed;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    height: 18vw;
+    background-color: #00ffbf;
+    text-align: center;
+    font-size: 6vw;
+    font-family: 'Roboto', sans-serif;
+    color: #ff0000;
 }
