--- a/main.css
+++ b/main.css
@@ -38,6 +38,12 @@ button {
     font-family: 'Roboto', sans-serif;
 }
 
+@media only screen and (max-width: 600px) {
+    button {
+        width: 15vw;
+    }
+}
+
 button:hover {
     background-color: #4dcf32;
 }
