--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: rgb(0, 0, 0);
 }
 
 canvas {
@@ -17,7 +17,7 @@ canvas {
     top: 0;
     left: 0;
     width: 100%;
-    height: 7vh;
+    height: 10vh;
     background-color: #4400ff;
 }
 
