--- a/calc.css
+++ b/calc.css
@@ -6,25 +6,22 @@
     left: 0;
     width: 100%;
     height: 14vh;
-    background-color: #4400ff;
+    background-color: #1900ff;
     z-index: 0;
 }
 
-#button {
-    bottom: 0;
-    width: 15vw;
-}
-
 #buttonOn {
-    bottom: 0;
-    width: 15vw;
+    background-color: #176807;
 }
 
-.hide {
-    display: none;
+#buttonOff+.hide {
+    color: white;
+    animation: slideIn 800ms;
+    animation-fill-mode: forwards;
+
 }
 
-#buttonOn + .hide {
+#buttonOn+.hide {
     display: block;
     color: white;
 }
@@ -34,21 +31,24 @@
     text-align: center;
     bottom: -6vh;
     width: 100%;
-    background-color: #4400ff00;
+    background-color: #1900ff00;
     position: fixed;
     height: 26vh;
     z-index: 1;
 }
 
 .menuPanel {
+    text-align: center;
+    font-size: 2vi;
     position: fixed;
     width: 100%;
-    height: 150px;
+    height: 76vh;
     top: 10%;
-    background-color: #4400ff;
+    background-color: #3600caec;
     z-index: 1;
     animation: slideOut 800ms;
 }
+
 
 @keyframes slideOut {
     100% {
@@ -58,4 +58,28 @@
     0% {
         top: +150%;
     }
+}
+
+@keyframes slideIn {
+    0% {
+        top: 10%;
+    }
+
+    100% {
+        top: +150%;
+
+        .menuPanel {
+            display: none;
+        }
+    }
+
+}
+
+input {
+    font-size: 2vi;
+}
+
+.dmgDiv{
+    display: flex;
+    justify-content: space-evenly;
 }
