--- a/calc.css
+++ b/calc.css
@@ -2,19 +2,6 @@
     background-color: #176807;
 }
 
-#buttonOff+.hide {
-    color: white;
-    animation: slideIn 800ms;
-    animation-fill-mode: forwards;
-    z-index: -10;
-
-}
-
-#buttonOn+.hide {
-    color: white;
-    z-index: -10;
-}
-
 .container {
     position: fixed;
     left: 0;
@@ -26,6 +13,17 @@
 }
 
 .menuPanel {
+    text-align: center;
+    font-size: 2vi;
+    position: fixed;
+    width: 100%;
+    height: 76vh;
+    top: 10%;
+    background-color: #3600caec;
+    animation: slideOut 800ms;
+}
+
+.scathaPanel {
     text-align: center;
     font-size: 2vi;
     position: fixed;
@@ -55,10 +53,6 @@
 
     100% {
         top: +100%;
-
-        .menuPanel {
-            display: none;
-        }
     }
 
 }
@@ -70,4 +64,30 @@ input {
 .dmgDiv{
     display: flex;
     justify-content: space-evenly;
+}
+
+#scathaOff+.hide {
+    color: white;
+    animation: slideIn 800ms;
+    animation-fill-mode: forwards;
+    z-index: -10;
+
+}
+
+#scathaOn+.hide {
+    color: white;
+    z-index: -10;
+}
+
+#dmgOff+.hide {
+    color: white;
+    animation: slideIn 800ms;
+    animation-fill-mode: forwards;
+    z-index: -10;
+
+}
+
+#dmgOn+.hide {
+    color: white;
+    z-index: -10;
 }
