--- a/yallMyfellars/views/index.ejs
+++ b/yallMyfellars/views/index.ejs
@@ -7,29 +7,61 @@
     </script>
     <style>
         #points {
+            font-family: 'Courier New', Courier, monospace;
+            font-weight: bold;
             position: absolute;
-            top: 60vh;
+            top: 25vh;
             right: 0;
-            width: 20%;
+            max-width: 30%;
             padding: 10px;
-            background: #0000009d;
+            background: #00eeff59;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            flex-wrap: wrap;
+            text-align: center;
+            color: white;
+            font-size: 2vi;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+        }
+
+        audio {
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            left: 100%;
+            height: 100px;
+            background: #00eeff59;
+            color: white;
+            font-size: 2vi;
         }
     </style>
 </head>
 
 <body style="overflow: hidden; margin: 0;"> <canvas id="canvas" width="" height=""></canvas>
-    <div id="points"></div>
+    <audio controls autoplay loop>
+        <source src="public\The Giant Enemy Spider (Remix) By Fluxxy.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+    <div id="points">
+    </div>
     <script>
         // start scoket.io connection
         const socket = io();
+        const textColor = '#' + Math.floor(Math.random() * 16777215).toString(16);
+        let username = prompt('What is your name?');
+        while (username == null || username == '' || username == undefined || username.length > 25) {
+            if (username == null || username == '' || username == undefined) {
+                alert('Enter something nerd');
+            } else if (username.length > 25) {
+                alert('Name too long bro');
+            }
+            username = prompt('What is your name?');
+        }
+        socket.emit('setUsername', { username: username, textColor: textColor});
         // get variable name and send it to the server to be assigned to the player who set it
 
 
-        let username = prompt('Enter your username');
-        socket.emit('setUsername', username);
 
         const jerm = new Image();
         jerm.src = 'jermaStare.png';
@@ -54,8 +86,6 @@
 
         const beam2Flip = new Image();
         beam2Flip.src = 'beam2Flip.png';
-
-
 
         var players = {};
         var longest;
@@ -111,23 +141,10 @@
         socket.on('update', function (data) {
 
             ctx.clearRect(0, 0, 1920, 1080);
-            points()
             for (var player in data.players) {
                 players[player] = data.players[player];
             }
 
-
-            function points() {
-
-                    pointsDiv.innerHTML = '';
-                    for (var player in players) {
-                        const points = players[player].points;
-                        const playerPoints = document.createElement('p');
-                        playerPoints.innerText = `Player ${player}: ${points} points`;
-                        pointsDiv.appendChild(playerPoints);
-                    }
-                    
-            }
 
         });
 
@@ -141,21 +158,40 @@
 
         // on reqestanimationfroame, erease canvs
         requestAnimationFrame(draw);
-
         function draw() {
             ctx.beginPath();
             ctx.clearRect(0, 0, 1920, 1080);
             ctx.drawImage(square, 0, -200, window.innerWidth * 2, window.innerHeight)
             ctx.drawImage(wood, 0, 980, window.innerWidth * 2, window.innerHeight / 5);
             for (var player in players) {
+                const pointsDiv = document.getElementById('points');
+
+                // update the pointsDiv with every player's points
+                pointsDiv.innerHTML = '';
+                for (const playerId in players) {
+                    const playerPoints = players[playerId].points;
+                    const playerPointsElement = document.createElement('div');
+                    playerPointsElement.textContent = '';
+                    if (playerId == longest) {
+                        playerPointsElement.style.color = 'red';
+                        playerPointsElement.innerHTML += '(KING)';
+                    }
+                    playerPointsElement.textContent += `${players[playerId].username}: ${playerPoints}`;
+                    pointsDiv.appendChild(playerPointsElement);
+                }
+
+
+
                 const { x, y } = players[player];
                 // draw a circle at the recieved positon
                 ctx.beginPath();
                 if (players[player].playerId != longest) {
                     ctx.rect(x, y - 30, players[player].health * 3, 25);
-                    ctx.fillStyle = 'red';
-                    ctx.fill();
+                    ctx.fillStyle = players[player].textColor;
+                    ctx.fill();       
                     ctx.drawImage(rat, x, y, rat.width / 1.25, rat.height / 1.5);
+                    ctx.font = "60px Arial";
+                    ctx.fillText(players[player].username + ": " + players[player].points, x + 5, y - 50, rat.width / 1.25, rat.height / 1.5);
 
                 }
                 if (players[player].playerId == longest) {
