--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@ canvas {
     align-content: center;
     top: 0;
     left: 0;
+    z-index: 1;
     width: 100%;
     height: 10vh;
     background-color: #1900ff;
