--- a/learnCode/style.css
+++ b/learnCode/style.css
@@ -18,6 +18,18 @@ body {
     font-size: 2.5vi;
 }
 
+#pauseMenu {
+    position: fixed;
+    top: 47%;
+    left: 52.5%;
+    transform: translate(-50%, -50%);
+    background-color: #00eeff59;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    font-size: 2.5vi;
+}
+
 @font-face {
     font-family: 'Genos';
     src: url('Genos-BoldItalic.ttf'),
@@ -29,7 +41,7 @@ p {
     background-color: #00000000;
 }
 
-#pStart {
+#p {
     background-color: #00000000;
     box-shadow: none;
 }
@@ -38,12 +50,40 @@ p {
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    cursor: pointer;
     user-select: none;
 }
-#startButton:hover {
+#startButton:hover, #pauseButton:hover {
     background-color: #00eeff;
 }
-#startButton:active {
+#startButton:active, #pauseButton:active {
     background-color: #00eeff59;
+}
+
+#pauseButton, #startButton {
+    cursor: pointer;
+}
+
+#craftMenu {
+    position: fixed;
+    right: -13%;
+    bottom: 0;
+    background-color: #0c7ecafd;
+    height: 100%;
+    width: 25%;
+    border-left: 5px solid #00eeff;
+}
+
+#craftMenu:hover {
+    animation-fill-mode: forwards;
+    animation: slideOut 800ms;
+}
+
+@keyframes slideOut {
+    100% {
+        right: 0;
+    }
+
+    0% {
+        right: -13%;
+    }
 }
