--- a/HighScoreDatabase/JordanSutherland/views/game.ejs
+++ b/HighScoreDatabase/JordanSutherland/views/game.ejs
@@ -15,11 +15,31 @@
             height: 100%;
             overflow: hidden;
         }
+        #playButton, button {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-size: 200%;
+        }
+
+        button {
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
     </style>
 </head>
 
 <body>
     <canvas id="canvas" height="100%" width="100%"></canvas>
+    <div id="playButton">
+        <button onclick="startGame()">Play</button>
+    </div>
 </body>
 <script src="game.js"></script>
 
