--- a/multiplayerproject/views/game.ejs
+++ b/multiplayerproject/views/game.ejs
@@ -37,32 +37,7 @@
     socket.on('update', (data) => {
         // Update the local player list
         users = data.users;
-        user = data.users[socket.id];
-        console.log(user)
     });
-
-
-    window.onresize = function () {
-        socket.emit('resize', {
-            canvasWidth: window.innerWidth * 0.4,
-            canvasHeight: window.innerHeight * 0.4,
-            WIDTH: Math.floor(window.innerWidth / 3),
-            HEIGHT: Math.floor(window.innerHeight / 3),
-            HALF_WIDTH: Math.floor(window.innerWidth / 3) / 2,
-            HALF_HEIGHT: Math.floor(window.innerHeight / 3) / 2,
-        });
-    }
-
-    document.onload = function () {
-        socket.emit('resize', {
-            canvasWidth: window.innerWidth * 0.4,
-            canvasHeight: window.innerHeight * 0.4,
-            WIDTH: Math.floor(canvasWidth * 1.4 / 3),
-            HEIGHT: Math.floor(canvasHeight * 1.4 / 3),
-            HALF_WIDTH: WIDTH / 2,
-            HALF_HEIGHT: HEIGHT / 2,
-        });
-    }
 
 </script>
 
@@ -71,8 +46,44 @@
 
 </body>
 <script>
+
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
+
+    window.onresize = function () {
+        socket.emit('resize', {
+            canvasWidth: canvas.width,
+            canvasHeight: canvas.height,
+            WIDTH: Math.floor(window.innerWidth / 3),
+            HEIGHT: Math.floor(window.innerHeight / 3),
+            HALF_WIDTH: Math.floor(window.innerWidth / 3) / 2,
+            HALF_HEIGHT: Math.floor(window.innerHeight / 3) / 2,
+        });
+    }
+
+    function onLoad() {
+        socket.emit('resize', {
+            canvasWidth: canvas.width,
+            canvasHeight: canvas.height,
+            WIDTH: Math.floor(window.innerWidth / 3),
+            HEIGHT: Math.floor(window.innerHeight / 3),
+            HALF_WIDTH: Math.floor(window.innerWidth / 3) / 2,
+            HALF_HEIGHT: Math.floor(window.innerHeight / 3) / 2,
+        });
+    }
+
+    //Raycasting Stuff  
+
+    // 88888888ba                                                                        88                                ad88888ba                          ad88     ad88  
+    // 88      "8b                                                                ,d     ""                               d8"     "8b  ,d                    d8"      d8"    
+    // 88      ,8P                                                                88                                      Y8,          88                    88       88     
+    // 88aaaaaa8P'  ,adPPYYba,  8b       d8   ,adPPYba,  ,adPPYYba,  ,adPPYba,  MM88MMM  88  8b,dPPYba,    ,adPPYb,d8     `Y8aaaaa,  MM88MMM  88       88  MM88MMM  MM88MMM  
+    // 88""""88'    ""     `Y8  `8b     d8'  a8"     ""  ""     `Y8  I8[    ""    88     88  88P'   `"8a  a8"    `Y88       `"""""8b,  88     88       88    88       88     
+    // 88    `8b    ,adPPPPP88   `8b   d8'   8b          ,adPPPPP88   `"Y8ba,     88     88  88       88  8b       88             `8b  88     88       88    88       88     
+    // 88     `8b   88,    ,88    `8b,d8'    "8a,   ,aa  88,    ,88  aa    ]8I    88,    88  88       88  "8a,   ,d88     Y8a     a8P  88,    "8a,   ,a88    88       88     
+    // 88      `8b  `"8bbdP"Y8      Y88'      `"Ybbd8"'  `"8bbdP"Y8  `"YbbdP"'    "Y888  88  88       88   `"YbbdP"Y8      "Y88888P"   "Y888   `"YbbdP'Y8    88       88     
+    //                              d8'                                                                    aa,    ,88                                                        
+    //                             d8'                                                                      "Y8bbdP"                                                         
 
     // FPS
     const FPS = 60;
@@ -169,66 +180,28 @@
         var playerX = user.playerX;
         var playerY = user.playerY;
         var playerAngle = user.playerAngle;
+
         // Resize dynamically
-        canvas.width = window.innerWidth * 0.4;
-        canvas.height = window.innerHeight * 0.4;
-
-
+        canvas.width = window.innerWidth / 2;
+        canvas.height = window.innerHeight / 1.5;
 
         // update player position
         var mapTargetX = user.mapTargetX;
         var mapTargetY = user.mapTargetY;
 
         // Calculate map & player offsets
-        var mapOffsetX = user.mapOffsetX;
-        var mapOffsetY = user.mapOffsetY;
-        var playerMapX = user.playerMapX;
-        var playerMapY = user.playerMapY;
-
-        for (user in users) {
-            if (users[user].userId == socket.id) { continue } else {
-                let user = users[user];
-                // player
-                playerX = user.playerX;
-                playerY = user.playerY;
-                playerAngle = user.playerAngle;
-                // Resize dynamically
-                canvas.width = window.innerWidth * 0.4;
-                canvas.height = window.innerHeight * 0.4;
-
-
-
-                // update player position
-                mapTargetX = user.mapTargetX;
-                mapTargetY = user.mapTargetY;
-
-                // Calculate map & player offsets
-                mapOffsetX = user.mapOffsetX;
-                mapOffsetY = user.mapOffsetY;
-                playerMapX = user.playerMapX;
-                playerMapY = user.playerMapY;
-            };
-            let otherUser = users[user];
-
-        }
-        console.log(playerMapX,
-            playerMapY,
-            mapOffsetX,
-            mapOffsetY,
-            mapTargetX,
-            mapTargetY,
-            playerX,
-            playerY,
-        );
+        var mapOffsetX = 0;
+        var mapOffsetY = 0;
+        var playerMapX = (playerX / MAP_SCALE) * 5 + mapOffsetX;
+        var playerMapY = (playerY / MAP_SCALE) * 5 + mapOffsetY;
 
         // Draw Background
-        ctx.drawImage(WALLS[0], canvas.width / 2 - HALF_WIDTH, canvas.height / 2 - HALF_HEIGHT, WIDTH, HEIGHT);
+        ctx.drawImage(WALLS[0], 0, 0, WIDTH, HEIGHT);
 
         // Raycasting
         var currentAngle = playerAngle + HALF_FOV;
         var rayStartX = Math.floor(playerX / MAP_SCALE) * MAP_SCALE;
         var rayStartY = Math.floor(playerY / MAP_SCALE) * MAP_SCALE;
-
 
         // loop for casted rays
         for (var ray = 0; ray < WIDTH; ray++) {
@@ -277,10 +250,11 @@
             textureOffset = textureOffset - Math.floor(textureOffset / MAP_SCALE) * MAP_SCALE;
             depth *= Math.cos(playerAngle - currentAngle);
             var wallHeight = Math.min(Math.floor(MAP_SCALE * 300 / (depth + 0.0001)), 50000);
-            // ctx.fillStyle = verticalDepth < horizontalDepth ? '#bbb' : '#aaa';
-            // ctx.fillRect(mapOffsetX + ray, mapOffsetY + (HALF_HEIGHT - wallHeight / 2), 1, wallHeight);
 
-            try {
+            if (!textureImage) {
+                ctx.fillStyle = 'black';
+                ctx.fillRect(mapOffsetX + ray, mapOffsetY + (HALF_HEIGHT - wallHeight / 2), 1, wallHeight);
+            } else {
                 ctx.drawImage(
                     WALLS[textureImage],
                     textureOffset,  // Source img x offset
@@ -291,16 +265,12 @@
                     mapOffsetY + (HALF_HEIGHT - Math.floor(wallHeight / 2)), // Target image y offset
                     1, // Target image width
                     wallHeight, // Target image height
-
                 );
-            } catch (error) {
-                console.log(error);
             }
 
             // update current angle
             currentAngle -= STEP_ANGLE;
         }
-
 
         // Draw 2d map
         if (showMap) {
@@ -330,41 +300,119 @@
             ctx.stroke();
         }
 
-        // fix wall layout
-        ctx.fillStyle = 'white';
-        ctx.fillRect(0, 0, canvas.width, mapOffsetY);
-        ctx.fillRect(0, mapOffsetY + WIDTH, canvas.width, canvas.width - mapOffsetY + WIDTH);
-
-        //inf loop
-        setTimeout(gameLoop, cycleDelay);
-
         // Draw FPS
         ctx.fillStyle = 'black';
         ctx.font = '1vi Arial';
         ctx.fillText('FPS: ' + fps_rate, 5, 15);
         let temp = 15;
         for (user in users) {
+            let itUser = users[user];
             ctx.fillText(users[user].name, 5, 30 + Object.keys(users).indexOf(users[user].name) * 15 + temp);
             temp += 15;
+            switch (itUser.corner) {
+                case "top-left":
+                    cornerX = 0;
+                    cornerY = 0;
+                    break;
+                case "top-right":
+                    cornerX = canvas.width / 2;
+                    cornerY = 0;
+                    break;
+                case "bottom-left":
+                    cornerX = 0;
+                    cornerY = canvas.height / 2;
+                    break;
+                    case "bottom-right":
+                    cornerX = canvas.width / 2;
+                    cornerY = canvas.height / 2;
+                    break;
+                default:
+                    cornerX = 0;
+                    cornerY = 0;
+                    break;
+                }
+
+                
+
+            // Raycast other users
+            var otherUserX = itUser.playerX;
+            var otherUserY = itUser.playerY;
+            var otherUserAngle = itUser.playerAngle;
+
+            var otherCurrentAngle = otherUserAngle + HALF_FOV;
+            var otherRayStartX = Math.floor(otherUserX / MAP_SCALE) * MAP_SCALE;
+            var otherRayStartY = Math.floor(otherUserY / MAP_SCALE) * MAP_SCALE;
+
+            for (var otherRay = 0; otherRay < WIDTH; otherRay++) {
+                var otherCurrentSin = Math.sin(otherCurrentAngle); otherCurrentSin = otherCurrentSin ? otherCurrentSin : .000001;
+                var otherCurrentCos = Math.cos(otherCurrentAngle); otherCurrentCos = otherCurrentCos ? otherCurrentCos : .000001;
+
+                var otherRayEndX, otherRayEndY, otherRayDirectionX, otherVerticalDepth, otherTextureEndY, otherTextureY;
+                if (otherCurrentSin > 0) { otherRayEndX = otherRayStartX + MAP_SCALE; otherRayDirectionX = 1 }
+                else { otherRayEndX = otherRayStartX; otherRayDirectionX = -1 }
+                for (var otherOffset = 0; otherOffset < MAP_RANGE; otherOffset += MAP_SCALE) {
+                    otherVerticalDepth = (otherRayEndX - otherUserX) / otherCurrentSin;
+                    otherRayEndY = otherUserY + otherVerticalDepth * otherCurrentCos;
+                    var otherMapTargetX = Math.floor(otherRayEndX / MAP_SCALE);
+                    var otherMapTargetY = Math.floor(otherRayEndY / MAP_SCALE);
+                    if (otherCurrentSin <= 0) otherMapTargetX += otherRayDirectionX;
+                    var otherTargetSquare = otherMapTargetY * MAP_SIZE + otherMapTargetX;
+                    if (otherTargetSquare < 0 || otherTargetSquare >= map.length - 1) break;
+                    if (map[otherTargetSquare] != 0) { otherTextureY = map[otherTargetSquare]; break; };
+                    otherRayEndX += otherRayDirectionX * MAP_SCALE;
+                }
+                otherTextureEndY = otherRayEndY;
+
+                var otherRayEndY, otherRayEndX, otherRayDirectionY, otherHorizontalDepth, otherTextureEndX, otherTextureX;
+                if (otherCurrentCos > 0) { otherRayEndY = otherRayStartY + MAP_SCALE; otherRayDirectionY = 1 }
+                else { otherRayEndY = otherRayStartY; otherRayDirectionY = -1 }
+                for (var otherOffset = 0; otherOffset < MAP_RANGE; otherOffset += MAP_SCALE) {
+                    otherHorizontalDepth = (otherRayEndY - otherUserY) / otherCurrentCos;
+                    otherRayEndX = otherUserX + otherHorizontalDepth * otherCurrentSin;
+                    var otherMapTargetX = Math.floor(otherRayEndX / MAP_SCALE);
+                    var otherMapTargetY = Math.floor(otherRayEndY / MAP_SCALE);
+                    if (otherCurrentCos <= 0) otherMapTargetY += otherRayDirectionY;
+                    var otherTargetSquare = otherMapTargetY * MAP_SIZE + otherMapTargetX;
+                    if (otherTargetSquare < 0 || otherTargetSquare >= map.length - 1) break;
+                    if (map[otherTargetSquare] != 0) { otherTextureX = map[otherTargetSquare]; break; };
+                    otherRayEndY += otherRayDirectionY * MAP_SCALE;
+                }
+                otherTextureEndX = otherRayEndX;
+                
+                var otherDepth = otherVerticalDepth < otherHorizontalDepth ? otherVerticalDepth : otherHorizontalDepth;
+                var otherTextureImage = otherVerticalDepth < otherHorizontalDepth ? otherTextureY : otherTextureX;
+                var otherTextureOffset = otherVerticalDepth < otherHorizontalDepth ? otherTextureEndY : otherTextureEndX;
+                otherTextureOffset = otherTextureOffset - Math.floor(otherTextureOffset / MAP_SCALE) * MAP_SCALE;
+                otherDepth *= Math.cos(otherUserAngle - otherCurrentAngle);
+                var otherWallHeight = Math.min(Math.floor(MAP_SCALE * 300 / (otherDepth + 0.0001)), 50000);
+                
+                if (!otherTextureImage) {
+                    ctx.fillStyle = 'black';
+                    ctx.fillRect(cornerX + otherRay, cornerY + (HALF_HEIGHT - otherWallHeight / 2), 1, otherWallHeight);
+                } else {
+                    ctx.drawImage(
+                        WALLS[otherTextureImage],
+                        otherTextureOffset,
+                        0,
+                        1,
+                        128,
+                        cornerX + otherRay,
+                        cornerY + (HALF_HEIGHT - Math.floor(otherWallHeight / 2)),
+                        1,
+                        otherWallHeight,
+                    );
+                }
+
+                otherCurrentAngle -= STEP_ANGLE;
+            }
         }
 
-        // draw other players on 2d map
-        // for (user in users) {
-        //     if (users[user].userId == socket.id) continue;
-        //     let otherUser = users[user];
-        //     ctx.fillStyle = 'blue';
-        //     ctx.beginPath();
-        //     ctx.arc(otherUser.x, otherUser.y, 2, 0, DOUBLE_PI, true);
-        //     ctx.fill();
-        //     ctx.strokeStyle = 'blue';
-        //     ctx.lineWidth = 1;
-        //     ctx.beginPath();
-        //     ctx.moveTo(otherUser.x, otherUser.y);
-        //     ctx.lineTo(otherUser.x + Math.sin(otherUser.playerAngle) * 5, otherUser.y + Math.cos(otherUser.playerAngle) * 5);
-        //     ctx.stroke();
-        // }
 
-    } window.onload = function () { gameLoop(); };
+
+        //inf loop
+        setTimeout(gameLoop, cycleDelay);
+
+    } window.onload = function () { gameLoop(); onLoad(); };
 </script>
 
 </html>
